# rust_chat_server

./: Cargo.toml  README.md  Rocket.toml  asset-manifest.json  index.html
.github/workflows/: static.yml
client/: .env  .gitignore  3  Dockerfile  nginx.conf  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.tsx
client/src/components/collapseablemenu/: CollapseableMenu.css  CollapseableMenu.tsx
client/src/components/entermessage/: EnterMessage.css  (+1 more)
docs/: asset-manifest.json  index.html  manifest.json  script.js  style.css
docs/static/css/: main.153b9a72.css  main.153b9a72.css.map  main.84007447.css  main.84007447.css.map  main.8cc56522.css  main.8cc56522.css.map
docs/static/js/: main.13b23121.js  main.13b23121.js.map  main.2ee8eff9.js  main.2ee8eff9.js.map  main.33f64d85.js  main.33f64d85.js.map  main.461215c8.js  main.461215c8.js.map  main.4c9a7638.js  main.4c9a7638.js.map  main.9fb488e1.js  main.9fb488e1.js.map  main.b1ac850b.js  main.b1ac850b.js.map
src/: main.rs
src/auth/: github.rs  mod.rs  redis.rs
src/routes/: chat_app.rs  mod.rs
static/: index.html  style.css
static/css/: main.2e07e13a.css  main.2e07e13a.css.map  main.72430484.css  main.72430484.css.map  main.9bb596f2.css  main.9bb596f2.css.map  main.f8f8e973.css  main.f8f8e973.css.map
static/js/: 787.f756c598.chunk.js  787.f756c598.chunk.js.map  main.0f8edb6f.js  main.0f8edb6f.js.map  main.560ef2f8.js  main.560ef2f8.js.map  main.7c9ece87.js  main.7c9ece87.js.map  main.8f3bfd30.js  main.8f3bfd30.js.map  main.f71180b0.js  main.f71180b0.js.map
(+15 files in other folders)
