[package]
name = "rust_chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
fancy-regex = "0.11.0"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets", "tls", "mtls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
redis = { version = "0.21.2", features = ['aio', 'tokio-comp'] }
uuid = { version = "1.3.1", features = ['v4'] }
async-trait = '0.1'
log = "0.4.17"
simple_logger = "4.1.0"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tokio = { version = "1.24.2", features = ["macros"] }
rand = "0.8"
